This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

10-May-2004 (Lars Duening)  (3.3.542)
  - (mstrings.c) Since the purpose of mstring_unshare() and mstring_dup()
       is to create modifiable string copies, the .hash value is set
       to 0 in the new strings.
  - (doc/efun.de) Updated (thanks, Menaures!)

09-May-2004 (Lars Duening)  (3.3.541)
  - (mstrings) mstr_get_hash() macro now first checks if the hash has
       already been computed before calling the slower mstring_get_hash()
       function.
  - (pkg-tls, comm, func_spec, gcollect.c) tls_init_connection() is now
       able to set up the TLS connection in the background, optionally
       calling a callback function once the attempt fails or succeeds
       finally.

08-May-2004 (Lars Duening)  (3.3.540)
  - (make_func.y) Worked around a bug in the codegeneration on AIX 5.2 for
       both Visual Age C 6 and gcc 2.9.
  - (mapping.c) When looking up string keys, the code only checked if the
       string was tabled, not if it was directly tabled.
  - (mstrings) The hash of a string is now stored with the string data
       and computed on demand. Especially for lookups of strings in the
       string table this should give some advantages.
  - (mregex.c, otable.c) Make use of new mstring hash functions.
  - (interpret.c) When multiplying an array, string elements are now
       longer made tabled.

06-May-2004 (Lars Duening)  (3.3.539)
  - (array.c) Using name-based callbacks for unique_array() crashed
       the driver (reported by Ralph).
   - (mstrings.c) Modified mstring_make_tabled() and mstring_table_inplace()
        so that the strings are always tabled in-place (using indirectly
        tabled strings if necessary). This allows to table a string without
        allocating any extra memory.
   - (interpret.c) Assigning or transferring a string no longer makes