@@ -62,18 +62,17 @@
 ;; TODO:: replace-program and the saving/storing of lfun closure values.
 ;; TODO:: Is this desirable anyway?
               
-(Project-Version lpmud 3-3 542)
-(Parent-Version lpmud 3-3 541)
+(Project-Version lpmud 3-3 543)
+(Parent-Version lpmud 3-3 542)
 (Version-Log "
-  - (mstrings.c) Since the purpose of mstring_unshare() and mstring_dup()
-       is to create modifiable string copies, the .hash value is set
-       to 0 in the new strings.
-  - (doc/efun.de) Updated (thanks, Menaures!)
+  - (main.c, simul_efun.c) If the simul-efun object can't be reloaded at
+       runtime, don't terminate the driver (reported by Bardioc).
+  - (mregex.c) Corrected a memory leak when using PCRE (reported by Alwin).
 ")
 (New-Version-Log
 ""
 )
-(Checkin-Time "Mon, 10 May 2004 21:44:51 -0600")
+(Checkin-Time "Tue, 11 May 2004 21:29:44 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -111,7 +110,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.11 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.76 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.605 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.606 644))
   (HISTORY (lpmud/f/49_HISTORY 1.352 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.20 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -158,7 +157,7 @@
   (src/settings/theland (lpmud/a/b/12_spin 1.6 744))
   (src/settings/tubmud (lpmud/c/27_tubmud 1.7.1.13 744))
   (src/settings/traumland (lpmud/c/b/35_traumland 1.2 744))
-  (src/settings/unitopia (lpmud/c/7_unitopia 1.6.1.4.1.15 744))
+  (src/settings/unitopia (lpmud/c/7_unitopia 1.6.1.4.1.16 744))
   (src/settings/wunderland (lpmud/d/24_wunderland 1.3.1.9 744))
 
   (src/C_COMPILER_BUGS (lpmud/d/21_C_COMPILER 1.6.1.2.1.5 644))
@@ -201,11 +200,11 @@
   (src/heartbeat.c (lpmud/m/42_heartbeat. 1.18.1.9 644))
   (src/i-svalue_cmp.h (lpmud/a/b/20_i-svalue_c 1.4 644))
   (src/interpret.h (lpmud/b/13_interpret. 1.33.1.37 644))
-  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.53 644))
+  (src/interpret.c (lpmud/b/14_interpret. 1.125.1.103.1.54.1.54 644))
   (src/lex.h (lpmud/b/11_lex.h 1.16.1.15.1.8 644))
   (src/lex.c (lpmud/b/12_lex.c 1.62.1.71.1.67 644))
   (src/main.h (lpmud/f/31_main.h 1.14.1.4.1.16 644))
-  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.55 644))
+  (src/main.c (lpmud/b/8_main.c 1.60.1.43.1.56 644))
   (src/mapping.h (lpmud/f/30_mapping.h 1.12.1.20 644))
   (src/mapping.c (lpmud/b/6_mapping.c 1.36.1.80 644))
   (src/md5.h (lpmud/l/18_md5.h 1.3 644))
@@ -213,7 +212,7 @@
   (src/mempools.h (lpmud/d/48_mempools.h 1.2.1.8 644))
   (src/mempools.c (lpmud/d/49_mempools.c 1.2.1.15 644))
   (src/mregex.h (lpmud/e/29_rxcache.h 1.7.1.10 644))
-  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.30 644))
+  (src/mregex.c (lpmud/e/30_rxcache.c 1.11.1.31 644))
   (src/mstrings.h (lpmud/i/35_mstrings.h 1.25 644))
   (src/mstrings.c (lpmud/i/36_mstrings.c 1.21.1.28 644))
   (src/my-alloca.h (lpmud/f/29_my-alloca. 1.3.1.2 644))
@@ -295,7 +294,7 @@
   (src/sha1.h (lpmud/t/b/33_sha1.h 1.2 644))
   (src/sha1.c (lpmud/t/b/34_sha1.c 1.2 644))
   (src/simul_efun.h (lpmud/f/17_simul_efun 1.5.1.5 644))
-  (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.4 644))
+  (src/simul_efun.c (lpmud/32_simul_efun 1.20.1.17.1.5 644))
   (src/simulate.h (lpmud/f/16_simulate.h 1.25.1.33 644))
   (src/simulate.c (lpmud/31_simulate.c 1.88.1.123 644))
   (src/smalloc.h (lpmud/29_smalloc.h 1.16.1.14 644))
@@ -486,7 +485,7 @@
   (mudlib/dhrystone2.c (lpmud/a/b/13_dhrystone2 1.3 644))
   (mudlib/erq-tool.c (lpmud/d/31_erq.c 1.1 644))
   (mudlib/simul_efun-dr.c (lpmud/51_simul_efun 1.3 644))
-  (mudlib/master_skeleton.c (lpmud/b/2_master_ske 1.36 644))
+  (mudlib/master_skeleton.c (lpmud/b/2_master_ske 1.37 644))
   (mudlib/pgsql.c (lpmud/d/b/42_pgsql.c 1.1 644))
   (mudlib/telnetneg.h (lpmud/c/b/13_telnet.h 1.2 644))
   (mudlib/telnetneg.c (lpmud/c/b/14_telnetneg. 1.5 644))
@@ -1675,7 +1674,7 @@
   (doc/master/get_bb_uid (lpmud/r/47_get_bb_uid 1.5 644))
   (doc/master/get_ed_buffer_save_file_name (lpmud/r/48_get_ed_buf 1.2 644))
   (doc/master/get_master_uid (lpmud/r/49_get_master 1.3 644))
-  (doc/master/get_simul_efun (lpmud/r/51_get_simul_ 1.4 644))
+  (doc/master/get_simul_efun (lpmud/r/51_get_simul_ 1.5 644))
   (doc/master/get_wiz_name (lpmud/s/0_get_wiz_na 1.2 644))
   (doc/master/heart_beat_error (lpmud/s/1_heart_beat 1.2 644))
   (doc/master/inaugurate_master (lpmud/s/2_inaugurate 1.4 644))
