@@ -560,7 +560,12 @@ main (int argc, char **argv)
             check_a_lot_ref_counts_flag = MY_TRUE;
 #endif
 
-        get_simul_efun_object();
+        if (!get_simul_efun_object())
+        {
+            rc = 1;
+            break;
+        }
+
         if (game_is_being_shut_down)
         {
             rc = 1;
