@@ -1,6 +1,11 @@
 This file lists all changes made to the game driver in all gory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+11-May-2004 (Lars Duening)  (3.3.543)
+  - (main.c, simul_efun.c) If the simul-efun object can't be reloaded at
+       runtime, don't terminate the driver (reported by Bardioc).
+  - (mregex.c) Corrected a memory leak when using PCRE (reported by Alwin).
+
 10-May-2004 (Lars Duening)  (3.3.542)
   - (mstrings.c) Since the purpose of mstring_unshare() and mstring_dup()
        is to create modifiable string copies, the .hash value is set
